"README": Do some editin'.

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ FlippyWindow
 ============
 
 FlippyWindow is a super-simple Windows application that horizontally
-flips parts of the screen. [Flipping images][1] and [viewing things
+flips part of the screen. [Flipping images][1] and [viewing things
 with a mirror][2] is a technique used to help spot issues and mistakes.
 
 [1]: <http://yourfirstproduct.com/info/bmreverse>
