"README": Do some editin'.

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ FlippyWindow
 
 FlippyWindow is a super-simple Windows application that horizontally
 flips part of the screen. [Flipping images][1] and [viewing things
-with a mirror][2] is a technique used to help spot issues and mistakes.
+with a mirror is a technique used to help spot issues and mistakes][2].
 
 [1]: <http://yourfirstproduct.com/info/bmreverse>
 [2]: <http://www.comic-tools.com/2008/10/my-mirror-is-most-important.html>
