"README": Remove a word.

--- a/README
+++ b/README
@@ -18,7 +18,7 @@ Building FlippyWindow
 Precompiled binaries are coming soon, so, for now, to get FlippyWindow:
 
   1) Grab a copy of FlippyWindow's source code.
-  2) Use CMake to generate the Visual Studio bumf.
+  2) Use CMake to generate Visual Studio bumf.
   3) Use the generated Visual Studio bumf to build FlippyWindow.
 
 
