--- a/README
+++ b/README
@@ -11,23 +11,25 @@ aid with [spotting visual issues][3].
 [2]: <http://www.comic-tools.com/2008/10/my-mirror-is-most-important.html>
 [3]: <http://yourfirstproduct.com/info/bmreverse>
 
-FlippyWindow requires Windows Vista or a later Windows operating system
-as it (ab)uses the Magnification API.
+FlippyWindow requires Windows 8 or a later Windows operating system as
+it (ab)uses the [second release of the Magnification API][4].
+
+[4]: <https://msdn.microsoft.com/en-us/library/windows/desktop/ms692162(v=vs.85).aspx>
 
 
 Building FlippyWindow
 ---------------------
 
-  1) Grab a copy of [FlippyWindow's source code][4] (which is also
-  available on [GitHub][5]).
+  1) Grab a copy of [FlippyWindow's source code][5] (which is also
+  available on [GitHub][6]).
   2) Build FlippyWindow's icon with "BuildIcon.bat" (you'll need
-  [ImageMagick][6] installed and available from the command line).
+  [ImageMagick][7] installed and available from the command line).
   3) Use CMake to generate Visual Studio bumf.
   4) Use the generated Visual Studio bumf to build FlippyWindow.
 
-[4]: <https://www.robotinaponcho.net/git/?p=flippywindow.git>
-[5]: <https://github.com/damiendart/flippywindow>
-[6]: <https://www.imagemagick.org/>
+[5]: <https://www.robotinaponcho.net/git/?p=flippywindow.git>
+[6]: <https://github.com/damiendart/flippywindow>
+[7]: <https://www.imagemagick.org/>
 
 
 Licence
