--- a/TODO
+++ b/TODO
@@ -1,10 +1,11 @@
 TODO
 ====
 
-  * Release FlippyWindow version 1.0.
-    * [X] Make an application icon.
-    * [ ] Finish website and all that stuff.
+  * Release FlippyWindow version 1.1.
+    * [ ] Add "minimise-to-system-tray" functionality.
+    * [ ] Add support for inverting colours.
+    * [ ] Add support for saving images.
+    * [ ] Add support for vertical flipping.
+  * Add Git commit hash to version number?
+  * Add support for other compilers?
   * Get the FlippyWindow executable digitally signed.
-  * Add support for vertical flipping.
-  * Add support for inverting colours?
-  * Add support for saving images.
